[gd_scene load_steps=6 format=3 uid="uid://dc3ubes2w2wuj"]

[ext_resource type="Script" path="res://Assets/Scripts/Gamepad_Test.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c76rdapvm4m2i" path="res://Assets/GFX/xbox_one_controller_template_2048x.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ccf7x4c1vhcko" path="res://Assets/GFX/red_button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://c8ujssi6qjhsp" path="res://Assets/GFX/green_button.png" id="4"]

[sub_resource type="ShaderMaterial" id="1"]

[node name="Gamepad" type="Node2D"]
script = ExtResource("1")

[node name="XboxGamepad" type="TextureRect" parent="."]
offset_left = -0.716979
offset_top = -209.014
offset_right = 1023.29
offset_bottom = 814.986
texture = ExtResource("2")

[node name="Sticks" type="Node2D" parent="XboxGamepad"]

[node name="LeftStick" type="Sprite2D" parent="XboxGamepad/Sticks"]
position = Vector2(296, 396)
texture = ExtResource("3")

[node name="RightStick" type="Sprite2D" parent="XboxGamepad/Sticks"]
position = Vector2(620, 528)
texture = ExtResource("3")

[node name="Buttons" type="Node2D" parent="XboxGamepad"]
position = Vector2(-0.507324, 195.954)

[node name="UP" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(405, 292)
texture = ExtResource("4")

[node name="RIGHT" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(453.617, 337.305)
texture = ExtResource("4")

[node name="LEFT" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(351.521, 338.597)
texture = ExtResource("4")

[node name="DOWN" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(403.215, 386.414)
texture = ExtResource("4")

[node name="X" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(673.317, 197.73)
texture = ExtResource("4")

[node name="Y" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(730.181, 146.036)
texture = ExtResource("4")

[node name="B" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(788.337, 200.315)
texture = ExtResource("4")

[node name="A" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(731.473, 255.886)
texture = ExtResource("4")

[node name="RB" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(696.607, 39.2108)
texture = ExtResource("4")

[node name="RT" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(776.998, 42.3307)
texture = ExtResource("4")

[node name="LB" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(323.437, 39.5949)
texture = ExtResource("4")

[node name="LT" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(245.267, 42.3197)
texture = ExtResource("4")

[node name="L3" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(297.242, 199.023)
texture = ExtResource("4")

[node name="R3" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(621.623, 330.843)
texture = ExtResource("4")

[node name="SELECT" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(448.447, 204.192)
texture = ExtResource("4")

[node name="START" type="Sprite2D" parent="XboxGamepad/Buttons"]
material = SubResource("1")
position = Vector2(571.513, 200.315)
texture = ExtResource("4")
